(library
 (name ast)
 (modules ast)
 (libraries core)
 (preprocess
  (pps ppx_jane)))

(library
 (name lex)
 (modules lex)
 (libraries core)
 (preprocess
  (pps ppx_jane)))

(library
 (name parse)
 (modules parse)
 (libraries core ast lex)
 (preprocess
  (pps bisect_ppx)))

(library
 (name codegen)
 (modules codegen)
 (libraries core ast)
 (preprocess
  (pps ppx_jane bisect_ppx)))

(executable
 (name convert)
 (modules convert)
 (libraries core))
