(library
 (name ast)
 (modules ast)
 (libraries core)
 (preprocess
  (pps ppx_jane)))

(library
 (name lex)
 (modules lex)
 (libraries core)
 (preprocess
  (pps ppx_jane bisect_ppx)))

(library
 (name parse)
 (modules parse)
 (libraries core ast lex)
 (preprocess
  (pps bisect_ppx)))

(library
 (name codegenutil)
 (modules codegenUtil)
 (libraries base core ast)
 (preprocess
  (pps ppx_jane bisect_ppx)))

(library
 (name codegen)
 (modules codegen)
 (libraries core ast codegenutil)
 (preprocess
  (pps ppx_jane bisect_ppx)))

(executable
 (name convert)
 (modules convert)
 (libraries core core_kernel core_unix.command_unix ast lex parse codegen)
 (preprocess
  (pps ppx_let ppx_jane bisect_ppx)))
